# Agentes

./: .gitignore  Diseno_detallado_arnes_dev_legacy-2.md  Diseno_detallado_fabrica_software_SDD-2.md  README.md  pyproject.toml
.github/workflows/: deploy-ec2.yml
PLANTILLA_FRONTEND/: USO_OBLIGATORIO.md
docs/: AGENTES_Y_HANDOFFS.md  ARQUITECTURA_DATOS_SIGED.md  ARQUITECTURA_FABRICA.md  DECISIONES_ARQUITECTONICAS_SIGED.md  EDITOR_INCREMENTAL_Y_ROLLBACK.md  EJECUCION_SEGURA.md  GUIA_POSTGRESQL_DEV_QA.md  HERRAMIENTAS_Y_GATES.md  MIGRACIONES_Y_SEEDS.md  PLAN_EVOLUCION_FABRICA.md  PLAN_IMPLEMENTACION_SIGED.md  REQUERIMIENTOS_EVOLUCION_WEBFORGE.md  VALIDACIONES_BASE_DATOS.md
docs/ENTREGA_FINAL/: 01_Documentacion_Proyecto_SIGED_Lampa.md  01_Inventario_Evidencias.md  01_Matriz_Cumplimiento_Rubrica.md  INSTRUCCIONES_EXPORTACION_PDF.md
examples/: work_order_factory.json  work_order_siged_lampa.json
project/proyecto-dos/: project-manifest.json
project/proyecto-uno/: project-manifest.json  project-memory-policy.json
project/webforge-factory-runtime/: project-manifest.json
projects/dos/: especificacion_cinco.md
projects/uno/: ANEXO_N°3.docx  ANEXO_N°4.docx  ANEXO_N°5.docx  ANEXO_N°6.docx  (+1 more)
tests/: test_execution.py  test_normalization.py  test_phase01_safety.py  test_planning.py  test_webforge_runtime.py
webforge/: __init__.py  api.py  baseline.py  capabilities.py  cli.py  context.py  harness.py  isolation.py  models.py  orchestrator.py  policy.py  principles.py  project_workspace.py  siged.py  siged_tasks.py  siged_templates.py  tools.py  utils.py
(+1483 files in other folders)
