[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webforge-factory"
version = "0.1.0"
description = "WEBFORGE local SDD factory runtime with P01-P12 operational gates."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
webforge = "webforge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
